--- a/01.javascript/todoapp/api/package.json
+++ b/01.javascript/todoapp/api/package.json
@@ -12,12 +12,14 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "eslint": "^8.52.0",
     "express": "~4.16.1",
     "express-validator": "^7.0.1",
     "lodash": "^4.17.21",
     "lowdb": "^6.1.1",
     "moment": "^2.29.4",
     "morgan": "~1.9.1",
+    "prettier": "^3.0.3",
     "swagger-autogen": "^2.23.6",
     "swagger-ui-express": "^5.0.0"
   }
