--- a/01.javascript/todoapp/api/package.json
+++ b/01.javascript/todoapp/api/package.json
@@ -22,5 +22,8 @@
     "prettier": "^3.0.3",
     "swagger-autogen": "^2.23.6",
     "swagger-ui-express": "^5.0.0"
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^9.0.0"
   }
 }
