--- a/03.react/tsconfig.json
+++ b/03.react/tsconfig.json
@@ -15,7 +15,14 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"],
+      // "@common/*": ["src/component/common/*"],
+      // "@pages/*": ["src/pages/*"],
+      // "@component/*": ["src/component/*"],
+    }
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.spec.ts"]
